--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
     <title>Travel Goals</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <div id="page-logo">
         <a href="index.html">MIAMI GUIDE</a>
       </div>
       <nav>
-            
+        <ul>
+          <li><a href="/places.html">Places</a></li>
+          <li><a href="/history.html">History</a></li>
+          <li><a href="/livingcost.html">Living Cost</a></li>
+        </ul>        
       </nav>
 
     </header>
