nav,header added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <link href="shared.css" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet" />
     <title>Travel Goals</title>
   </head>
   <body>
@@ -33,8 +33,13 @@
     </header>
 
     <main>
-      <section></section>
-      <section></section>
+      <section id="section1">
+        <div id="section1_content">
+          <h1>MIAMI BEACH,FL</h1>
+          <a href="/places.html">Places</a>
+        </div>
+      </section>
+      <section id="section2"></section>
     </main>
     <footer> </footer>
   </body>
