feat: add section 2

--- a/index.html
+++ b/index.html
@@ -39,7 +39,23 @@
           <a href="/places.html">Places</a>
         </div>
       </section>
-      <section id="section2"></section>
+      <section id="section2">
+        <h2>Highlights</h2>
+        <ul id="photos">
+          <li class="photo">
+            <img src="/places/miami.jpg">
+            <p>Miami,<strong>USA</strong></p>
+          </li>
+          <li class="photo">
+            <img src="/places/barcelona.jpg">
+            <p>Barcelona,<strong>SPAIN</strong></p>
+          </li>
+          <li class="photo">
+            <img src="/places/munich.jpg">
+            <p>Munich,<strong>GERMANY</strong></p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer> </footer>
   </body>
