feat: add footer

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
         </ul>
       </section>
     </main>
-    <footer> </footer>
+    <footer> 
+      <ul>
+        <li>
+          <a href="https://www.instagram.com"><img src="Icons/insta.png" alt="instagram"></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com"><img src="Icons/facebook.png" alt="facebook"></a>
+        </li>
+      </ul>
+
+    </footer>
   </body>
 </html>
